--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Oatt123.GitHub.io : 魔乐塔的个人主页">
+    <meta name="description" content="魔乐塔的个人主页 : 魔乐塔的个人主页">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Oatt123.GitHub.io</title>
+    <title>魔乐塔的个人主页</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/oatt123">View on GitHub</a>
 
-          <h1 id="project_title">Oatt123.GitHub.io</h1>
+          <h1 id="project_title">魔乐塔的个人主页</h1>
           <h2 id="project_tagline">魔乐塔的个人主页</h2>
 
         </header>
