--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="魔乐塔的个人主页 : 魔乐塔的个人主页">
+    <meta name="description" content="魔乐塔的个人主页 : 人类是文明的缔造者，但当它存在以后，就不属于人类了。若是上帝造了人，那么人也不是属于上帝的，人属于人类自己。我们已看不到上帝，终有一天，继承这文明的，也将看不到我们。">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/oatt123">View on GitHub</a>
 
           <h1 id="project_title">魔乐塔的个人主页</h1>
-          <h2 id="project_tagline">魔乐塔的个人主页</h2>
+          <h2 id="project_tagline">人类是文明的缔造者，但当它存在以后，就不属于人类了。若是上帝造了人，那么人也不是属于上帝的，人属于人类自己。我们已看不到上帝，终有一天，继承这文明的，也将看不到我们。</h2>
 
         </header>
     </div>
