--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>除了上海代表团之外，还有一个团也是习近平每年必去的，即解放军代表团。</p>
       </section>
     </div>
-
+    <a href="http://www.baidu.com">百度</a>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
