Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>除了上海代表团之外，还有一个团也是习近平每年必去的，即解放军代表团。</p>
+        <p>js中的一些细节</p>
       </section>
     </div>
-    <a href="http://www.baidu.com">百度</a>
+
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
