Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@ isNaN方法也使用与对象。</p>
 <p>8、e在数值中的使用</p>
 
 <p>9、Number.NEGATIVE_INFINITY,Number.POSITIVE_INFINITY</p>
+
+<h2>
+<a id="3级" class="anchor" href="#3%E7%BA%A7" aria-hidden="true"><span class="octicon octicon-link"></span></a>3级</h2>
+
+<p>1、字符字面量指的是转义序列</p>
+
+<p>2、String()函数
+在不知道要转换的值是不是null或undefined的情况下，可以使用转型函数String()，转型函数String的特点是，如果值有toString()方法，调用toString()方法，如果值是null，返回字符串"null"，如果值是undefined，返回字符串"undefined"
+3、</p>
       </section>
     </div>
 
