Revert "Replace master branch with page content via GitHub"
This reverts commit a05322ab91c19b548d760fb76aec81e7e5c438d6.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@ isNaN方法也使用与对象。</p>
 <p>1、字符字面量指的是转义序列</p>
 
 <p>2、String()函数
-在不知道要转换的值是不是null或undefined的情况下，可以使用转型函数String()，转型函数String的特点是，如果值有toString()方法，调用toString()方法，如果值是null，返回字符串"null"，如果值是undefined，返回字符串"undefined"</p>
+在不知道要转换的值是不是null或undefined的情况下，可以使用转型函数String()，转型函数String的特点是，如果值有toString()方法，调用toString()方法，如果值是null，返回字符串"null"，如果值是undefined，返回字符串"undefined"
+3、</p>
       </section>
     </div>
 
