--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 <a id="js中的一些细节" class="anchor" href="#js%E4%B8%AD%E7%9A%84%E4%B8%80%E4%BA%9B%E7%BB%86%E8%8A%82" aria-hidden="true"><span class="octicon octicon-link"></span></a>js中的一些细节</h1>
 
 <h2>
+<a href="./js-01.html">js-01-js中一些细节</a>
+
+
 <a id="1级" class="anchor" href="#1%E7%BA%A7" aria-hidden="true"><span class="octicon octicon-link"></span></a>1级</h2>
 
 <p>1、XHTML:HTML遵循xml的规则。XHTML中“&lt;” ，“&gt;”需要使用html实体(&lt;&amp;lt;)替代，当然，这样会导致代码不容易理解，可以使用CDATA区域来解决（CDATA区域的语法规则：&lt;![CDATA[ ... ... ]]&gt;）</p>
