Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ Object对象的使用</li>
 
 <p>对象字面量表示法``</p>
 
-<p>var person = new Object()
+<p><code>var person = new Object();
 person.name = "Nick";
-person.age  = 29;</p>
+person.age  = 29;</code></p>
       </section>
     </div>
 
